# prompts_to_table

./: .gitignore  .nojekyll  README.md  _quarto.yml  example.env  example_workflow_notebook.html  example_workflow_notebook.ipynb  index.html  index.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
_site/: .nojekyll
app/feature_report_flow/: build_output_feature_report.py  flow.dag.yaml  load_feature_report.py  segment_feature_report.jinja2  standardize_feature_report.jinja2
app/feature_report_flow/.promptflow/: flow.tools.json
app/feature_specimen_flow/: build_output_feature_specimen.py  flow.dag.yaml  load_feature_specimen.py  segment_feature_specimen.jinja2  standardize_feature_specimen.jinja2
app/helper_functions/: fix_corrupted_json.py  flat_results.py  get_json_outputs.py  prep_data.py  run_pf_wrapper.py  schema.py
app/panel_specimen_flow/: build_output_panel_specimen.py  flow.dag.yaml  load_panel_specimen.py  segment_1_panel_specimen.jinja2  segment_2_panel_specimen.jinja2  standardize_panel_specimen.jinja2
app/schemas/: pathology_breast_schema_v3.json  pathology_rcc_schema_v12.json  pathology_rcc_schema_v13.json
docs/: about.html  index.html  quickstart.html  quickstart.qmd
docs/code_reference/: schemas.qmd
docs/guides_tutorials/: adding_connections.html  basic_usage.qmd  editing_prompts.html  editing_prompts.qmd  flows.html  flows.qmd
example_data/input/: example_csv_data.csv  example_filter_by.csv  example_jsonl_data.jsonl
site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
(+2 files in other folders)
